feat(recall): #MZI-214 adapt front for recall rework

--- a/admin/src/main/ts/src/app/management/zimbra/zimbra.component.html
+++ b/admin/src/main/ts/src/app/management/zimbra/zimbra.component.html
@@ -90,12 +90,9 @@
                   <br>
                 </td>
                 <td> 
-                    <span *ngIf="recalledMail.status == 'WAITING'">
-                        {{recalledMail.action.tasks.total }} {{getNumberMailToRecallMessage(recalledMail)}}
-                    </span>
-                    <span *ngIf="recalledMail.status != 'WAITING'">
-                        {{recalledMail.action.tasks.finished }} / {{recalledMail.action.tasks.total }}
-                    </span>                     
+                    <span>
+                        {{ getProgressionMessageDependingOnRecalls(recalledMail) }}
+                    </span>                   
                 </td>
                 <td [title]="('management.zimbra.return.tooltip.remove' | translate)"
                     (click)="openDeleteLightBox(recalledMail)">
