feat(appointments): [#RDV-50] add icon for Appointments

--- a/admin/src/main/ts/src/assets/_apps.scss
+++ b/admin/src/main/ts/src/assets/_apps.scss
@@ -486,3 +486,13 @@ i.visioconf-large {
     color: $purple;
   }
 }
+
+i.appointments,
+i.appointments-large,
+i.type.appointments {
+  @include fonticon;
+  &::before {
+    content: "\e96a";
+    color: $green;
+  }
+}
